# Reltio_bulk_merge_agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
local_test/: README.md  demo_integration.py  demo_local.py  mock_reltio_server.py  run_tests.sh
sample_data/: hcp_sample.csv  hcp_sample.json
src/: __init__.py  cli.py
src/api/: __init__.py  merge_api.py
src/core/: __init__.py  match_analyzer.py  merge_assistant.py  merge_executor.py  reltio_client.py
src/parsers/: __init__.py  file_parser.py
src/ui/: __init__.py  streamlit_app.py
tests/: __init__.py  conftest.py  test_file_parser.py  test_match_scorer.py  test_merge_executor.py
