[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reltio-bulk-merge-agent"
version = "1.0.0"
description = "AI-powered bulk match & merge agent for Reltio MDM - supports HCP, HCO, and custom entity types"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Yaduraj Singh", email = "yadurajsingh96@gmail.com"}
]

keywords = [
    "reltio",
    "mdm",
    "master-data-management",
    "merge",
    "bulk-merge",
    "hcp",
    "data-steward",
    "entity-resolution",
    "ai",
    "mcp"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "openai>=1.10.0",
    "anthropic>=0.40.0",
    "streamlit>=1.30.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
bulk-merge = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yadurajsingh96/reltio-bulk-merge-agent"
Documentation = "https://github.com/yadurajsingh96/reltio-bulk-merge-agent#readme"
Repository = "https://github.com/yadurajsingh96/reltio-bulk-merge-agent.git"
Issues = "https://github.com/yadurajsingh96/reltio-bulk-merge-agent/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
